fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -211,6 +211,7 @@ p {
   overflow-wrap: break-word !important;
 }
 
-#root > div > div.article-page-container > div.fw-light > p {
+#root > div > div.article-page-container > div.fw-light {
   word-break: break-all;
+  padding: 0 20px;
 }
